# bia6304-assignment5

./: .gitignore  01-load.ipynb  02-run.ipynb  README.md  pyproject.toml
assets/: area_results.jsonl
assignment/: __main__.py  assignment5.py  chat.py  config.py  dqm.py  embedding.py  llm.py
